@@ -1,5 +1,5 @@
 /*
- * Copyright 2013-2023 the original author or authors.
+ * Copyright 2013-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@ package org.springframework.data.mongodb.core.aggregation;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.bson.Document;
@@ -66,19 +65,11 @@ class SpelExpressionTransformer implements AggregationExpressionTransformer {
 	 * Creates a new {@link SpelExpressionTransformer}.
 	 */
 	SpelExpressionTransformer() {
-
-		List<ExpressionNodeConversion<? extends ExpressionNode>> conversions = new ArrayList<ExpressionNodeConversion<? extends ExpressionNode>>();
-		conversions.add(new OperatorNodeConversion(this));
-		conversions.add(new LiteralNodeConversion(this));
-		conversions.add(new IndexerNodeConversion(this));
-		conversions.add(new InlineListNodeConversion(this));
-		conversions.add(new PropertyOrFieldReferenceNodeConversion(this));
-		conversions.add(new CompoundExpressionNodeConversion(this));
-		conversions.add(new MethodReferenceNodeConversion(this));
-		conversions.add(new NotOperatorNodeConversion(this));
-		conversions.add(new ValueRetrievingNodeConversion(this));
-
-		this.conversions = Collections.unmodifiableList(conversions);
+		this.conversions = List.of(new OperatorNodeConversion(this), new LiteralNodeConversion(this),
+				new IndexerNodeConversion(this), new InlineListNodeConversion(this),
+				new PropertyOrFieldReferenceNodeConversion(this), new CompoundExpressionNodeConversion(this),
+				new MethodReferenceNodeConversion(this), new NotOperatorNodeConversion(this),
+				new ValueRetrievingNodeConversion(this));
 	}
 
 	/**
@@ -259,7 +250,7 @@ class SpelExpressionTransformer implements AggregationExpressionTransformer {
 		private Document createOperationObjectAndAddToPreviousArgumentsIfNecessary(
 				AggregationExpressionTransformationContext<OperatorNode> context, OperatorNode currentNode) {
 
-			Document nextDocument = new Document(currentNode.getMongoOperator(), new ArrayList<Object>());
+			Document nextDocument = new Document(currentNode.getMongoOperator(), new ArrayList<>());
 
 			if (!context.hasPreviousOperation()) {
 				return nextDocument;
@@ -282,7 +273,7 @@ class SpelExpressionTransformer implements AggregationExpressionTransformer {
 				@Nullable Object leftResult) {
 
 			Object result = leftResult instanceof Number ? leftResult
-					: new Document("$multiply", Arrays.<Object> asList(Integer.valueOf(-1), leftResult));
+					: new Document("$multiply", Arrays.asList(-1, leftResult));
 
 			if (leftResult != null && context.hasPreviousOperation()) {
 				context.addToPreviousOperation(result);
@@ -450,10 +441,9 @@ class SpelExpressionTransformer implements AggregationExpressionTransformer {
 				args = dbo;
 			} else if (ObjectUtils.nullSafeEquals(methodReference.getArgumentType(), ArgumentType.EMPTY_DOCUMENT)) {
 				args = new Document();
-			}
-			else {
+			} else {
 
-				List<Object> argList = new ArrayList<Object>();
+				List<Object> argList = new ArrayList<>();
 
 				for (ExpressionNode childNode : node) {
 					argList.add(transform(childNode, context));
@@ -516,7 +506,7 @@ class SpelExpressionTransformer implements AggregationExpressionTransformer {
 		protected Object convert(AggregationExpressionTransformationContext<NotOperatorNode> context) {
 
 			NotOperatorNode node = context.getCurrentNode();
-			List<Object> args = new ArrayList<Object>();
+			List<Object> args = new ArrayList<>();
 
 			for (ExpressionNode childNode : node) {
 				args.add(transform(childNode, context));
