@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2023 the original author or authors.
+ * Copyright 2016-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 package org.springframework.data.mongodb.core.aggregation;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -171,12 +170,11 @@ public class VariableOperators {
 		private Document toMap(ExposedFields exposedFields, AggregationOperationContext context) {
 
 			Document map = new Document();
-			InheritingExposedFieldsAggregationOperationContext operationContext = new InheritingExposedFieldsAggregationOperationContext(
-					exposedFields, context);
+			AggregationOperationContext operationContext = context.inheritAndExpose(exposedFields);
 
 			Document input;
-			if (sourceArray instanceof Field) {
-				input = new Document("input", context.getReference((Field) sourceArray).toString());
+			if (sourceArray instanceof Field field) {
+				input = new Document("input", context.getReference(field).toString());
 			} else {
 				input = new Document("input", ((AggregationExpression) sourceArray).toDocument(context));
 			}
@@ -224,12 +222,25 @@ public class VariableOperators {
 	public static class Let implements AggregationExpression {
 
 		private final List<ExpressionVariable> vars;
+
+		@Nullable //
 		private final AggregationExpression expression;
 
-		private Let(List<ExpressionVariable> vars, AggregationExpression expression) {
+		private Let(List<ExpressionVariable> vars, @Nullable AggregationExpression expression) {
 
 			this.vars = vars;
 			this.expression = expression;
+		}
+
+		/**
+		 * Create a new {@link Let} holding just the given {@literal variables}.
+		 *
+		 * @param variables must not be {@literal null}.
+		 * @return new instance of {@link Let}.
+		 * @since 4.1
+		 */
+		public static Let just(ExpressionVariable... variables) {
+			return new Let(List.of(variables), null);
 		}
 
 		/**
@@ -238,14 +249,14 @@ public class VariableOperators {
 		 * @param variables must not be {@literal null}.
 		 * @return
 		 */
-		public static LetBuilder define(final Collection<ExpressionVariable> variables) {
+		public static LetBuilder define(Collection<ExpressionVariable> variables) {
 
 			Assert.notNull(variables, "Variables must not be null");
 
 			return new LetBuilder() {
 
 				@Override
-				public Let andApply(final AggregationExpression expression) {
+				public Let andApply(AggregationExpression expression) {
 
 					Assert.notNull(expression, "Expression must not be null");
 					return new Let(new ArrayList<ExpressionVariable>(variables), expression);
@@ -259,19 +270,10 @@ public class VariableOperators {
 		 * @param variables must not be {@literal null}.
 		 * @return
 		 */
-		public static LetBuilder define(final ExpressionVariable... variables) {
+		public static LetBuilder define(ExpressionVariable... variables) {
 
 			Assert.notNull(variables, "Variables must not be null");
-
-			return new LetBuilder() {
-
-				@Override
-				public Let andApply(final AggregationExpression expression) {
-
-					Assert.notNull(expression, "Expression must not be null");
-					return new Let(Arrays.asList(variables), expression);
-				}
-			};
+			return define(List.of(variables));
 		}
 
 		public interface LetBuilder {
@@ -283,10 +285,11 @@ public class VariableOperators {
 			 * @return
 			 */
 			Let andApply(AggregationExpression expression);
+
 		}
 
 		@Override
-		public Document toDocument(final AggregationOperationContext context) {
+		public Document toDocument(AggregationOperationContext context) {
 			return toLet(ExposedFields.synthetic(Fields.fields(getVariableNames())), context);
 		}
 
@@ -304,24 +307,30 @@ public class VariableOperators {
 
 			Document letExpression = new Document();
 			Document mappedVars = new Document();
-			InheritingExposedFieldsAggregationOperationContext operationContext = new InheritingExposedFieldsAggregationOperationContext(
-					exposedFields, context);
 
 			for (ExpressionVariable var : this.vars) {
 				mappedVars.putAll(getMappedVariable(var, context));
 			}
 
 			letExpression.put("vars", mappedVars);
-			letExpression.put("in", getMappedIn(operationContext));
+			if (expression != null) {
+
+				AggregationOperationContext operationContext = context.inheritAndExpose(exposedFields);
+				letExpression.put("in", getMappedIn(operationContext));
+			}
 
 			return new Document("$let", letExpression);
 		}
 
 		private Document getMappedVariable(ExpressionVariable var, AggregationOperationContext context) {
 
-			return new Document(var.variableName,
-					var.expression instanceof AggregationExpression ? ((AggregationExpression) var.expression).toDocument(context)
-							: var.expression);
+			if (var.expression instanceof AggregationExpression expression) {
+				return new Document(var.variableName, expression.toDocument(context));
+			}
+			if (var.expression instanceof Field field) {
+				return new Document(var.variableName, context.getReference(field).toString());
+			}
+			return new Document(var.variableName, var.expression);
 		}
 
 		private Object getMappedIn(AggregationOperationContext context) {
@@ -371,6 +380,10 @@ public class VariableOperators {
 
 				Assert.notNull(expression, "Expression must not be null");
 				return new ExpressionVariable(variableName, expression);
+			}
+
+			public ExpressionVariable forField(String fieldRef) {
+				return new ExpressionVariable(variableName, Fields.field(fieldRef));
 			}
 
 			/**
