@@ -1,5 +1,5 @@
 /*
- * Copyright 2021-2023 the original author or authors.
+ * Copyright 2021-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -41,7 +41,7 @@ public class MappingContextConfigurer {
 	}
 
 	public void initialEntitySet(Class<?>... initialEntitySet) {
-		this.intitalEntitySet = new HashSet<>(Arrays.asList(initialEntitySet));
+		this.intitalEntitySet = Set.of(initialEntitySet);
 	}
 
 	Set<Class<?>> initialEntitySet() {
